CPU tuning for lighter systems Lower CPU to 648MHz for the lightest systems to save battery. All of these systems run at full speed with 648MHz frequency with the default core, apart from NGP/NGPC where I have changed the core from mednafen_ngp to RACE.

--- a/Emu/NGP/config_hidden.json
+++ b/Emu/NGP/config_hidden.json
@@ -16,15 +16,15 @@
       "launch": "/mnt/SDCARD/App/aleatorio/aleatorio.sh"
     },
     {
-      "name": "✓ Core is mednafen_ngp",
-      "launch": "mednafen_ngp.sh"
-    },
-    {
-      "name": "Change core to race",
+      "name": "✓ Core is race",
       "launch": "race.sh"
     },
     {
-      "name": "Set CPU to 648 MHz",
+      "name": "Set core to mednafen_ngp",
+      "launch": "mednafen_ngp.sh"
+    },
+    {
+      "name": "✓ CPU is at 648 MHz",
       "launch": "648.sh"
     },
     {
@@ -32,7 +32,7 @@
       "launch": "816.sh"
     },
     {
-      "name": "✓ CPU is at 1200 MHz",
+      "name": "Set CPU to 1200 MHz",
       "launch": "1200.sh"
     },
     {
