--- a/App/Syncthing/config.json
+++ b/App/Syncthing/config.json
@@ -1,5 +1,5 @@
 {
-"label": "Syncthing - ON",
+"label": "SYNCTHING - ON",
 "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/syncthing.png",
 "launch": "launch.sh",
 "description": "Synchronize Your Saves and Files"
