--- a/Emu/NEOGEO/config_hidden.json
+++ b/Emu/NEOGEO/config_hidden.json
@@ -16,8 +16,8 @@
       "launch": "/mnt/SDCARD/App/aleatorio/aleatorio.sh"
     },
     {
-      "name": "✓ Core is fbalpha2012_neogeo",
-      "launch": "fbalpha2012_neogeo.sh"
+      "name": "✓ Core is fbalpha2012",
+      "launch": "fbalpha2012.sh"
     },
     {
       "name": "Change core to fbneo",
