--- a/App/ExpertAppSwitch/config.json
+++ b/App/ExpertAppSwitch/config.json
@@ -1,5 +1,5 @@
 {
-  "label": "EXPERT APP SWITCH",
+  "label": "EXPERT APPS - OFF",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/expertappswitch.png",
   "launch": "launch.sh",
   "description": "Show or Hide Expert Apps",
