Adjusting app names to be Title Case

--- a/App/BootLogo/config.json
+++ b/App/BootLogo/config.json
@@ -1,5 +1,5 @@
 {
-  "#label": "BOOT LOGO",
+  "#label": "Boot Logo",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/bootlogo.png",
   "launch": "launch.sh",
   "description": "Swap the Boot Logo at Start Up",
