--- a/App/EmuFresh/config.json
+++ b/App/EmuFresh/config.json
@@ -1,5 +1,5 @@
 {
-  "label": "EMU FRESH",
+  "label": "Emu Fresh",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/emufresh.png",
   "launch": "launch.sh",
   "description": "Refresh Roms & Displayed Emulators",
