--- a/App/FileManagement/config.json
+++ b/App/FileManagement/config.json
@@ -1,5 +1,5 @@
 {
-  "#label": "FILE MANAGEMENT",
+  "#label": "File Management",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/file.png",
   "launch": "launch.sh",
   "description": "View and Move Files On Your SD Card",
