--- a/App/LEDOn/config.json
+++ b/App/LEDOn/config.json
@@ -1,5 +1,5 @@
 {
-  "#label": "LED - OFF",
+  "#label": "LED - Off",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/led.png",
   "launch": "launch.sh",
   "description": "Toggle The Blue LED Mode",
