--- a/App/RecentSwitch/config.json
+++ b/App/RecentSwitch/config.json
@@ -1,5 +1,5 @@
 {
-  "#label": "RECENTS - OFF",
+  "#label": "Recents - Off",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/recents.png",
   "launch": "launch.sh",
   "description": "Turn on/off Recents",
