--- a/App/spruceBackup/config.json
+++ b/App/spruceBackup/config.json
@@ -1,5 +1,5 @@
 {
-	"label":        "SPRUCE BACKUP",
+	"label":        "Spruce Backup",
 	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/Icons/App/backup.png",
 	"launch":       "launch.sh",
 	"description":  "Back Up Your Configs and Settings",
