--- a/App/BoxartScraper/config.json
+++ b/App/BoxartScraper/config.json
@@ -1,5 +1,5 @@
 {
-  "label": "BOXART SCRAPER",
+  "label": "Boxart Scraper",
   "icon": "/mnt/SDCARD/Icons/Default/App/scraper.png",
   "launch": "launch.sh",
   "description": "Scrape Game Boxart",
