--- a/App/RandomGame/config.json
+++ b/App/RandomGame/config.json
@@ -1,5 +1,5 @@
 {
-  "label": "RANDOM GAME",
+  "label": "Random Game",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/random.png",
   "launch": "launch.sh",
   "description": "Launch a Random Game!",
