--- a/App/SSH/config.json
+++ b/App/SSH/config.json
@@ -1,5 +1,5 @@
 {
-  "#label": "SSH - OFF",
+  "#label": "SSH - Off",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/ssh.png",
   "launch": "launch.sh",
   "description": "Enable SSH for Code Wizardry",
