--- a/App/Syncthing/config.json
+++ b/App/Syncthing/config.json
@@ -1,5 +1,5 @@
 {
-  "#label": "SYNCTHING - ON",
+  "#label": "Syncthing - Off",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/syncthing.png",
   "launch": "launch.sh",
   "description": "Synchronize Your Saves and Files",
