--- a/App/sftpgo/config.json
+++ b/App/sftpgo/config.json
@@ -1,5 +1,5 @@
 {
-  "#label": "WIFI FILE TRANSFER - OFF",
+  "#label": "Wifi File Transfer - Off",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/App/sftpgo.png",
   "launch": "launch.sh",
   "description": "Upload and Manage Your Files Wirelessly",
