--- a/App/spruceRestore/config.json
+++ b/App/spruceRestore/config.json
@@ -1,5 +1,5 @@
 {
-	"label":        "SPRUCE RESTORE",
+	"label":        "Spruce Restore",
 	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/Icons/App/restore.png",
 	"launch":       "launch.sh",
 	"description":  "Restore Your Configs and Settings",
