Changing app name to title case

--- a/App/AdvancedSettings/config.json
+++ b/App/AdvancedSettings/config.json
@@ -1,5 +1,5 @@
 {
-  "label": "ADVANCED SETTINGS",
+  "label": "Advanced Settings",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/menuswitch.png",
   "launch": "launch.sh",
   "description": "Advanced settings for spruce",
