--- a/App/IconFresh/config.json
+++ b/App/IconFresh/config.json
@@ -1,7 +1,7 @@
 {
-  "label": "Icon Fresh",
+  "#label": "Icon Fresh",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/iconfresh.png",
   "launch": "launch.sh",
   "description": "Apply Icons From the Current Theme",
-  "expert": false
+  "expert": true
 }
