--- a/Emu/AMIGA/config_hidden.json
+++ b/Emu/AMIGA/config_hidden.json
@@ -28,20 +28,16 @@
       "launch": "uae4arm.sh"
     },
     {
-      "name": "Set CPU to 816 MHz",
-      "launch": "816.sh"
+      "name": "✓ CPU is set to Smart Mode",
+      "launch": "Smart.sh"
     },
     {
-      "name": "Set CPU to 1200 MHz",
-      "launch": "1200.sh"
+      "name": "Set CPU to Performance Mode",
+      "launch": "Performance.sh"
     },
     {
-      "name": "✓ CPU is at 1344 MHz",
-      "launch": "1344.sh"
-    },
-    {
-      "name": "Set CPU to 1512 MHz",
-      "launch": "1512.sh"
+      "name": "Set CPU to Overclock Mode",
+      "launch": "Overclock".sh"
     }
   ]
 }
