--- a/Emu/ATARI/config_hidden.json
+++ b/Emu/ATARI/config_hidden.json
@@ -16,16 +16,8 @@
       "launch": "/mnt/SDCARD/App/aleatorio/aleatorio.sh"
     },
     {
-      "name": "✓ CPU is set to Smart Mode",
-      "launch": "Smart.sh"
-    },
-    {
-      "name": "Set CPU to Performance Mode",
-      "launch": "Performance.sh"
-    },
-    {
-      "name": "Set CPU to Overclock Mode",
-      "launch": "Overclock".sh"
+      "name": "CPU Mode: (SMART)/performance/overclock",
+      "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Performance.sh"
     }
   ]
 }
