--- a/Emu/GB/config_hidden.json
+++ b/Emu/GB/config_hidden.json
@@ -24,20 +24,8 @@
       "launch": "gambatte.sh"
     },
     {
-      "name": "✓ CPU is at 648 MHz",
-      "launch": "648.sh"
-    },
-    {
-      "name": "Set CPU to 816 MHz",
-      "launch": "816.sh"
-    },
-    {
-      "name": "Set CPU to 1200 MHz",
-      "launch": "1200.sh"
-    },
-    {
-      "name": "Set CPU to 1344 MHz",
-      "launch": "1344.sh"
+      "name": "CPU Mode: (SMART)/performance/overclock",
+      "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Performance.sh"
     }
   ]
 }
