--- a/Emu/NDS/config_hidden.json
+++ b/Emu/NDS/config_hidden.json
@@ -15,6 +15,10 @@
     {
       "name": "Select Random Game",
       "launch": "/mnt/SDCARD/App/aleatorio/aleatorio.sh"
+    },
+    {
+      "name": "CPU Mode: (SMART)/performance/overclock",
+      "launch": "/mnt/SDCARD/.tmp_update/emu_setup/speed/Performance.sh"
     }
   ]
 }
