--- a/App/BootLogo/config.json
+++ b/App/BootLogo/config.json
@@ -2,6 +2,6 @@
   "#label": "Boot Logo",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/bootlogo.png",
   "launch": "launch.sh",
-  "description": "Swap the Boot Logo at Start Up",
+  "description": "Swap the boot logo at start up",
   "expert": true
 }
