--- a/App/EmuFresh/config.json
+++ b/App/EmuFresh/config.json
@@ -2,6 +2,6 @@
   "label": "Emu Fresh",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/emufresh.png",
   "launch": "launch.sh",
-  "description": "Refresh Roms & Displayed Emulators",
+  "description": "Refresh roms & displayed emulators",
   "expert": false
 }
