--- a/App/BoxartScraper/config.json
+++ b/App/BoxartScraper/config.json
@@ -2,6 +2,6 @@
   "label": "Boxart Scraper",
   "icon": "/mnt/SDCARD/Icons/Default/App/scraper.png",
   "launch": "launch.sh",
-  "description": "Scrape Game Boxart",
+  "description": "Scrape game boxart",
   "expert": false
 }
