--- a/App/FileManagement/config.json
+++ b/App/FileManagement/config.json
@@ -2,6 +2,6 @@
   "#label": "File Management",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/file.png",
   "launch": "launch.sh",
-  "description": "View and Move Files On Your SD Card",
+  "description": "View and edit files on your SD card",
   "expert": true
 }
