--- a/App/LEDOn/config.json
+++ b/App/LEDOn/config.json
@@ -2,6 +2,6 @@
   "#label": "LED - Off",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/led.png",
   "launch": "launch.sh",
-  "description": "Toggle The Blue LED Mode",
+  "description": "Change the blue LED mode",
   "expert": true
 }
