--- a/App/MiyooGamelist/config.json
+++ b/App/MiyooGamelist/config.json
@@ -2,6 +2,6 @@
   "#label": "Miyoo Gamelist",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/gamelist.png",
   "launch": "launch.sh",
-  "description": "Clean Up Displayed Rom Names",
+  "description": "Clean up displayed rom names",
   "expert": true
 }
