--- a/App/RecentSwitch/config.json
+++ b/App/RecentSwitch/config.json
@@ -2,6 +2,6 @@
   "#label": "Recents - Off",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/recents.png",
   "launch": "launch.sh",
-  "description": "Turn on/off Recents",
+  "description": "Turn On/Off recents",
   "expert": true
 }
