--- a/App/RetroExpert/config.json
+++ b/App/RetroExpert/config.json
@@ -2,6 +2,6 @@
   "#label": "RetroArch Expert Mode - Off",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/retroexpert.png",
   "launch": "launch.sh",
-  "description": "Uses Hotkeys, No In-Game Menu",
+  "description": "Uses hotkeys, no in-game menu",
   "expert": true
 }
