--- a/App/Syncthing/config.json
+++ b/App/Syncthing/config.json
@@ -2,6 +2,6 @@
   "#label": "Syncthing - Off",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/syncthing.png",
   "launch": "launch.sh",
-  "description": "Synchronize Your Saves and Files",
+  "description": "Synchronize your saves and files",
   "expert": true
 }
