Making Spruce Restore an expert app (Sigh), adding a script to unhide it when a backup file is present on restart, or after making a backup

--- a/App/spruceRestore/config.json
+++ b/App/spruceRestore/config.json
@@ -1,7 +1,7 @@
 {
-	"label":        "Spruce Restore",
+	"#label":        "Spruce Restore",
 	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/Icons/App/restore.png",
 	"launch":       "launch.sh",
 	"description":  "Restore configs and settings from backup",
-	"expert": false
+	"expert": true
 }
