--- a/Emu/VECTREX/config_hidden.json
+++ b/Emu/VECTREX/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "Vectrex",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/vectrex.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/vectrex.png",
-  "launch": "launch.sh",
+  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
   "rompath": "../../Roms/VECTREX",
   "imgpath": "../../Roms/VECTREX/Imgs",
   "gamelist": "../../Roms/VECTREX/miyoogamelist.xml",
