--- a/Emu/ATARI/config_hidden.json
+++ b/Emu/ATARI/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "Atari 2600",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/atari.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/atari.png",
-  "launch": "launch.sh",
+  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
   "rompath": "../../Roms/ATARI",
   "imgpath": "../../Roms/ATARI/Imgs",
   "gamelist": "../../Roms/ATARI/miyoogamelist.xml",
