--- a/Emu/DOS/config_hidden.json
+++ b/Emu/DOS/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "MS-DOS",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/dos.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/dos.png",
-  "launch": "launch.sh",
+  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
   "rompath": "../../Roms/DOS",
   "imgpath": "../../Roms/DOS/Imgs",
   "gamelist": "../../Roms/DOS/miyoogamelist.xml",
