--- a/Emu/FDS/config_hidden.json
+++ b/Emu/FDS/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "FDS",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/fds.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/fds.png",
-  "launch": "launch.sh",
+  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
   "rompath": "../../Roms/FDS",
   "imgpath": "../../Roms/FDS/Imgs",
   "gamelist": "../../Roms/FDS/miyoogamelist.xml",
