--- a/Emu/GB/config_hidden.json
+++ b/Emu/GB/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "GB",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/gb.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/gb.png",
-  "launch": "launch.sh",
+  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
   "rompath": "../../Roms/GB",
   "imgpath": "../../Roms/GB/Imgs",
   "gamelist": "../../Roms/GB/miyoogamelist.xml",
