--- a/Emu/MSU1/config_hidden.json
+++ b/Emu/MSU1/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "MSU1",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/msu1.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/msu1.png",
-  "launch": "launch.sh",
+  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
   "rompath": "../../Roms/MSU1",
   "imgpath": "../../Roms/MSU1/Imgs",
   "gamelist": "../../Roms/MSU1/miyoogamelist.xml",
