--- a/Emu/PS/config_hidden.json
+++ b/Emu/PS/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "PSX",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/ps.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/ps.png",
-  "launch": "launch.sh",
+  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
   "rompath": "../../Roms/PS",
   "imgpath": "../../Roms/PS/Imgs",
   "gamelist": "../../Roms/PS/miyoogamelist.xml",
