--- a/Emu/X68000/config_hidden.json
+++ b/Emu/X68000/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "X68000",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/x68000.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/x68000.png",
-  "launch": "launch.sh",
+  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
   "rompath": "../../Roms/X68000",
   "imgpath": "../../Roms/X68000/Imgs",
   "gamelist": "../../Roms/X68000/miyoogamelist.xml",
