--- a/App/RetroArch/config.json
+++ b/App/RetroArch/config.json
@@ -2,6 +2,6 @@
   "label": "RetroArch",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/Icons/App/retroarch.png",
   "launch": "launch.sh",
-  "description": "Core and came configuration",
+  "description": "Core and game configuration",
   "expert": false
 }
