--- a/App/spruceRestore/config.json
+++ b/App/spruceRestore/config.json
@@ -2,6 +2,6 @@
 	"#label":        "Spruce Restore",
 	"icon":	        "/mnt/SDCARD/Themes/SPRUCE/Icons/App/restore.png",
 	"launch":       "launch.sh",
-	"description":  "Restore configs and settings from backup",
+	"description":  "Restore configs & settings from backup",
 	"expert": true
 }
