Revert "reconfigure emu json files to launch from central location"
This reverts commit 5a6ea9f9e6e67b293bdad907d4ed60d4644f9b96.

--- a/Emu/AMIGA/config_hidden.json
+++ b/Emu/AMIGA/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "Amiga",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/amiga.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/amiga.png",
-  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
+  "launch": "launch.sh",
   "rompath": "../../Roms/AMIGA",
   "imgpath": "../../Roms/AMIGA/Imgs",
   "gamelist": "../../Roms/AMIGA/miyoogamelist.xml",
