--- a/Emu/PCECD/config_hidden.json
+++ b/Emu/PCECD/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "TG-CD",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/pcecd.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/pcecd.png",
-  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
+  "launch": "launch.sh",
   "rompath": "../../Roms/PCECD",
   "imgpath": "../../Roms/PCECD/Imgs",
   "gamelist": "../../Roms/PCECD/miyoogamelist.xml",
