--- a/Emu/CPS3/config_hidden.json
+++ b/Emu/CPS3/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "CPS3",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/cps3.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/cps3.png",
-  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
+  "launch": "launch.sh",
   "rompath": "../../Roms/CPS3",
   "imgpath": "../../Roms/CPS3/Imgs",
   "gamelist": "../../Roms/CPS3/miyoogamelist.xml",
