--- a/Emu/DC/config_hidden.json
+++ b/Emu/DC/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "DC",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/dc.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/dc.png",
-  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
+  "launch": "launch.sh",
   "rompath": "../../Roms/DC",
   "imgpath": "../../Roms/DC/Imgs",
   "gamelist": "../../Roms/DC/miyoogamelist.xml",
