--- a/Emu/MD/config_hidden.json
+++ b/Emu/MD/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "Genesis",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/md.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/md.png",
-  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
+  "launch": "launch.sh",
   "rompath": "../../Roms/MD",
   "imgpath": "../../Roms/MD/Imgs",
   "gamelist": "../../Roms/MD/miyoogamelist.xml",
