--- a/Emu/NDS/config_hidden.json
+++ b/Emu/NDS/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "NDS",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/nds.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/nds.png",
-  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/nds_launch.sh",
+  "launch": "launch.sh",
   "rompath": "../../Roms/NDS",
   "imgpath": "../../Roms/NDS/Imgs",
   "gamelist": "../../Roms/NDS/miyoogamelist.xml",
