--- a/Emu/NEOGEO/config_hidden.json
+++ b/Emu/NEOGEO/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "NeoGeo",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/neogeo.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/neogeo.png",
-  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
+  "launch": "launch.sh",
   "rompath": "../../Roms/NEOGEO",
   "imgpath": "../../Roms/NEOGEO/Imgs",
   "gamelist": "../../Roms/NEOGEO/miyoogamelist.xml",
