--- a/Emu/ODYSSEY/config_hidden.json
+++ b/Emu/ODYSSEY/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "Odyssey2",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/ody.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/ody.png",
-  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
+  "launch": "launch.sh",
   "rompath": "../../Roms/ODYSSEY",
   "imgpath": "../../Roms/ODYSSEY/Imgs",
   "gamelist": "../../Roms/ODYSSEY/miyoogamelist.xml",
