--- a/Emu/PORTS/config.json
+++ b/Emu/PORTS/config.json
@@ -2,7 +2,7 @@
   "label": "PORTS",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/ports.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/ports.png",
-  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/ports_launch.sh",
+  "launch": "launch.sh",
   "rompath": "/mnt/SDCARD/Roms/PORTS",
   "imgpath": "/mnt/SDCARD/Roms/PORTS/Imgs",
   "gamelist": "/mnt/SDCARD/Roms/PORTS/miyoogamelist.xml",
