--- a/Emu/PSP/config_hidden.json
+++ b/Emu/PSP/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "PSP",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/psp.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/psp.png",
-  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/psp_launch.sh",
+  "launch": "launch.sh",
   "rompath": "../../Roms/PSP",
   "imgpath": "../../Roms/PSP/Imgs",
   "gamelist": "../../Roms/PSP/miyoogamelist.xml",
