--- a/Emu/VIC20/config_hidden.json
+++ b/Emu/VIC20/config_hidden.json
@@ -2,7 +2,7 @@
   "label": "VIC-20",
   "icon": "/mnt/SDCARD/Themes/SPRUCE/icons/c64.png",
   "iconsel": "/mnt/SDCARD/Themes/SPRUCE/icons/sel/c64.png",
-  "launch": "/mnt/SDCARD/.tmp_update/emu_setup/launch/standard_launch.sh",
+  "launch": "launch.sh",
   "rompath": "../../Roms/VIC20",
   "imgpath": "../../Roms/VIC20/Imgs",
   "gamelist": "../../Roms/VIC20/miyoogamelist.xml",
